2000-02-29  Ben Sapp <bsapp@nua.lampf.lanl.gov>

	* examples/make_int.cc (make_int): Handle new operator names.

2000-02-23  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* octMakefile.in (maintainer-clean distclean): Don't delete Makefile.
	(dist): Delete stamp-auto.

2000-02-11  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (octincludedir): Delete trailing /octave here.
	* Makeconf.in (mk-includedir-link): Append it here.
	(MKOCTFILE_INCFLAGS): Use both -I$(octincludedir) and
	-I$(octincludedir)/octave.

	* configure.in (localveroctfiledir, localverarchlibdir,
	localverfcnfiledir): New variables.
	(localfcnfilepath): Prepend localverfcnfiledir.
	(localoctfilepath): Prepend localveroctfiledir.
	* Makeconf.in: Substitute them here.

	* Makeconf.in (do-subst-default-vals): Substitute
	OCTAVE_LOCALVERARCHLIBDIR, OCTAVE_LOCALVERFCNFILEDIR,
	OCTAVE_LOCALVEROCTFILEDIR.

2000-02-08  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* config.guess: Update to latest from subversions.gnu.org.
	* config.sub: Likewise.  Recognize sv1-cray as a basic_machine.

	* Makeconf.in (MKOCTFILE_INCFLAGS): New macro.
	(do-subst-conf-vals): Substitute it.
	* mkoctfile.in: Set INCFLAGS from OCTAVE_CONF_MKOCTFILE_INCFLAGS.

	* mkoctfile.in: Fix names in substititions.
	* octave-bug.in: Likewise.

2000-02-07  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in (do-subst-default-vals, do-subst-config-vals):
	Substitute more complete set of values.

2000-02-01  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* aclocal.m4 (octave_cv_string_npos): Add std:: qualifier.

2000-01-27  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* emacs/octave-mod.el (octave-begin-keywords): Add "do".
	(octave-end-keywords): Add "until".
	(octave-abbrev-table): Add "u" as abbrev for "until ()"
	(octave-block-match-alist): Add do-until.

2000-01-25  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Don't look for the sunmath library.
	Don't check for infinity or quiet_nan.
