@@ -2,6 +2,6 @@
 @c This is part of the Octave manual.
 @c For copying conditions, see the file gpl.texi.
 
-@set VERSION 2.0.5
+@set VERSION 2.1.x
 @set OCTAVEHOME /usr/local
 @set TARGETHOSTTYPE i586-pc-linux-gnu
